# Cruncher

./: .gitignore  LICENSE  README.md
cruncher_api/: .env  Cargo.toml  Rocket.toml
cruncher_api/migrations/2019-08-17-194434_create_stocks/: down.sql  up.sql
cruncher_api/migrations/2019-08-18-162559_create_similarity_ranking/: down.sql  up.sql
cruncher_api/migrations/2019-08-18-163943_create_token_count/: down.sql  up.sql
cruncher_api/migrations/2019-08-24-002306_change_similarity_to_integer/: down.sql  up.sql
cruncher_api/src/: cruncher_manager.rs  db_refresh.rs  endpoints.rs  lib.rs  logger.rs  main.rs  models.rs  parser.rs  ranker.rs  repos.rs  schema.rs  services.rs
cruncher_api/src/endpoints/: stock_similarity_endpoints.rs
cruncher_api/src/repos/: similarity_ranking_repo.rs  stock_repo.rs  token_count_repo.rs
cruncher_api/src/repos/similarity_ranking/: similarity_ranking_models.rs
cruncher_api/src/repos/similarity_ranking_repo/: similarity_ranking_models.rs
cruncher_api/src/repos/stock_repo/: stock_models.rs
cruncher_api/src/repos/token_count/: token_count_models.rs
cruncher_api/src/repos/token_count_repo/: token_count_models.rs
cruncher_api/src/services/: stock_similarity_service.rs
cruncher_api/src/services/stock_similarity_service/: ranker.rs
stock_parser/: .env  Cargo.toml
stock_parser/migrations/2019-07-14-045102_create_stocks/: down.sql  up.sql
stock_parser/src/: lib.rs  main.rs  models.rs  parser.rs  ranker.rs  schema.rs
stock_retrieval/: data-collector.js  preprocessor.js
