[package]
name = "cruncher_api"
version = "0.1.0"
authors = ["Trist"]
edition = "2018"

[dependencies]
syn = "0.14.4"
quote = "0.6.3"
serde_json = "1.0.40"
serde = {version = "1.0.94", features = ["derive"]}
diesel = { version = "1.4.2", features = ["postgres","numeric"] }
bigdecimal = "0.0.14"
dotenv = "0.9.0"
rocket = "0.4.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool"]

